[metadata]
name = quark
summary = A scalable compute(r) maker & manipulator (in a box).
description-file =
    README.rst
author = Those Developers
keywords = reliable,compute,distributed
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Libraries
    Topic :: System :: Distributed Computing

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    quark

[nosetests]
cover-erase = true
verbosity = 2

[pbr]
warnerrors = True

[wheel]
universal = 1
